--- a/jsf_06_web/src/main/webapp/tpl/dbs/performer.xhtml
+++ b/jsf_06_web/src/main/webapp/tpl/dbs/performer.xhtml
@@ -1,9 +1,26 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html">
+<ui:composition 
+	  xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:jsf="http://xmlns.jcp.org/jsf"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
+	
 
-	<ui:composition template="">
-	</ui:composition>
-</html>
+        
+        <h:form>
+    <div class="card">
+        <p:dataTable var="p" value="#{performerdb.getFullListP()}">
+            <p:column headerText="Performer_id">
+                <h:outputText value="#{p.performerId}" />
+            </p:column>
+
+            <p:column headerText="Name">
+                <h:outputText value="#{p.name}" />
+            </p:column>
+
+
+        </p:dataTable>
+    </div>
+</h:form>
+</ui:composition>
