--- a/jsf_06_web/src/main/webapp/db/dbEdit.xhtml
+++ b/jsf_06_web/src/main/webapp/db/dbEdit.xhtml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
-
+	   	 			
+<ui:insert name="over"></ui:insert>
 
 
 <h:head>
@@ -42,9 +44,8 @@
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.xhtml"> <h:graphicImage
-						name="/images/muza.jpg" library="assets" width="7%" />
-				</a>
+				<a class="navbar-brand" href="index.xhtml"><img
+					src="assets/images/logo.png" alt="Progressus HTML5 template" /></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
@@ -63,17 +64,16 @@
 							<li><p:link outcome="/cart/cart.xhtml" value="Koszyk" /></li>
 
 
-
 						</ul></li>
 
 					<li><h:button value="Login" outcome="login.xhtml"
 							rendered="#{not albumList.loggedin()}"
 							styleClass="btn btn-action" icon="pi pi-check" iconPos="left" />
 					</li>
-					<li><p:commandButton value="Logout"
-							action="#{loginBean.doLogout}" outcome="index.xhtml"
-							rendered="#{albumList.loggedin()}" styleClass="btn btn-action"
-							icon="pi pi-check" iconPos="left" /></li>
+					<li><h:commandButton value="Logout"
+							action="#{loginBean.doLogout}" rendered="#{albumList.loggedin()}"
+							styleClass="btn btn-action" icon="pi pi-check" iconPos="left" />
+					</li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
@@ -82,7 +82,7 @@
 	<!-- /.navbar -->
 
 	<!-- Header -->
-	<header class="head">
+	<header id="head">
 		<div class="container">
 			<div class="row">
 				<h1 class="lead">Harmonia Records</h1>
@@ -100,53 +100,8 @@
 	<div class="jumbotron top-space">
 		<div class="container">
 
-			<div class="card product">
+			<ui:insert name="content"></ui:insert>
 
-				<p:panel header="Opcje wyszukiwania" toggleable="true"
-					style="margin-bottom: 1em;">
-					<h:form>
-						<h:panelGrid columns="2" cellpadding="5">
-							<h:outputLabel value="Tytuł:" />
-							<p:inputText value="#{albumList.title}"
-								placeholder="Wyszukaj..." />
-							<p:commandButton value="Szukaj"
-								 update="form" />
-						</h:panelGrid>
-					</h:form>
-				</p:panel>
-
-				<h:form id="form">
-					<p:dataTable var="a" value="#{albumList.lazyModel}"
-						paginator="true" rows="5"
-						paginatorTemplate="{PreviousPageLink} {CurrentPageReport} {NextPageLink} {RowsPerPageDropdown}"
-						rowsPerPageTemplate="5,10,15" id="albumTable" lazy="true">
-
-						<p:column headerText="album">
-							<h:outputText value="#{a.title} by #{a.performer.name}" />
-						</p:column>
-
-						<p:column headerText="Genre">
-							<h:outputText style="vertical-align: middle; margin-left: .5rem"
-								value="#{a.genre}" />
-						</p:column>
-
-						<p:column headerText="Tracks">
-							<h:outputText value="#{a.tracks}" />
-						</p:column>
-
-						<p:column headerText="Cena">
-
-							<h:outputText style="vertical-align: middle; margin-left: .5rem"
-								value="#{a.price} zł" />
-							<br />
-							<p:commandButton action="albumList.addToCart(a)"
-								value="Add To Cart" icon="pi pi-shopping-cart">
-							</p:commandButton>
-						</p:column>
-
-					</p:dataTable>
-				</h:form>
-			</div>
 		</div>
 
 	</div>
