--- a/jsf_06_web/src/main/webapp/tpl/dbs/performerEdit.xhtml
+++ b/jsf_06_web/src/main/webapp/tpl/dbs/performerEdit.xhtml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
+<f:metadata>
+	<f:viewAction action="#{performerEdit.onLoad()}" />
+</f:metadata>
 
 
 <h:head>
@@ -14,7 +18,7 @@
 	<meta name="author" content="Sergey Pozhilov (GetTemplate.com)" />
 
 
-	<h:outputStylesheet name="css/style.css" library="assets" />
+
 	<h:outputStylesheet name="css/bootstrap.min.css" library="assets" />
 
 	<link rel="stylesheet" media="screen"
@@ -42,9 +46,8 @@
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.xhtml"> <h:graphicImage
-						name="/images/muza.jpg" library="assets" width="7%" />
-				</a>
+				<a class="navbar-brand" href="index.xhtml"><img
+					src="assets/images/logo.png" alt="Progressus HTML5 template" /></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
@@ -63,17 +66,16 @@
 							<li><p:link outcome="/cart/cart.xhtml" value="Koszyk" /></li>
 
 
-
 						</ul></li>
 
 					<li><h:button value="Login" outcome="login.xhtml"
 							rendered="#{not albumList.loggedin()}"
 							styleClass="btn btn-action" icon="pi pi-check" iconPos="left" />
 					</li>
-					<li><p:commandButton value="Logout"
-							action="#{loginBean.doLogout}" outcome="index.xhtml"
-							rendered="#{albumList.loggedin()}" styleClass="btn btn-action"
-							icon="pi pi-check" iconPos="left" /></li>
+					<li><h:commandButton value="Logout"
+							action="#{loginBean.doLogout}" rendered="#{albumList.loggedin()}"
+							styleClass="btn btn-action" icon="pi pi-check" iconPos="left" />
+					</li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
@@ -82,7 +84,7 @@
 	<!-- /.navbar -->
 
 	<!-- Header -->
-	<header class="head">
+	<header id="head">
 		<div class="container">
 			<div class="row">
 				<h1 class="lead">Harmonia Records</h1>
@@ -100,53 +102,41 @@
 	<div class="jumbotron top-space">
 		<div class="container">
 
-			<div class="card product">
 
-				<p:panel header="Opcje wyszukiwania" toggleable="true"
-					style="margin-bottom: 1em;">
-					<h:form>
-						<h:panelGrid columns="2" cellpadding="5">
-							<h:outputLabel value="Tytuł:" />
-							<p:inputText value="#{albumList.title}"
-								placeholder="Wyszukaj..." />
-							<p:commandButton value="Szukaj"
-								 update="form" />
+			<div class="card">
+
+				<p:panel toggleable="true" header="Edycja rekordu">
+
+					<h:form rendered="#{performerEdit.performer != null}">
+						<h:panelGrid columns="3" cellpadding="5">
+
+							<h:outputLabel for="p-name" value="Wykonawca:" />
+							<p:inputText id="p-name" value="#{performerEdit.performer.name}"
+								required="true" requiredMessage="Podaj Tytuł"
+								validatorMessage="co najwyżej 40 znaków">
+								<f:validateLength maximum="40" />
+							</p:inputText>
+							<p:message for="p-name" display="icon" />
+
+
+
+
 						</h:panelGrid>
+
+						<p:messages id="msgs" />
+
+						<p:commandButton value="Zapisz"
+							action="#{performerEdit.saveData()}" style="margin-right: 1em;"
+							update="@form" />
+
+						<p:button value="Anuluj" outcome="/db/dbView.xhtml" />
 					</h:form>
+
 				</p:panel>
 
-				<h:form id="form">
-					<p:dataTable var="a" value="#{albumList.lazyModel}"
-						paginator="true" rows="5"
-						paginatorTemplate="{PreviousPageLink} {CurrentPageReport} {NextPageLink} {RowsPerPageDropdown}"
-						rowsPerPageTemplate="5,10,15" id="albumTable" lazy="true">
-
-						<p:column headerText="album">
-							<h:outputText value="#{a.title} by #{a.performer.name}" />
-						</p:column>
-
-						<p:column headerText="Genre">
-							<h:outputText style="vertical-align: middle; margin-left: .5rem"
-								value="#{a.genre}" />
-						</p:column>
-
-						<p:column headerText="Tracks">
-							<h:outputText value="#{a.tracks}" />
-						</p:column>
-
-						<p:column headerText="Cena">
-
-							<h:outputText style="vertical-align: middle; margin-left: .5rem"
-								value="#{a.price} zł" />
-							<br />
-							<p:commandButton action="albumList.addToCart(a)"
-								value="Add To Cart" icon="pi pi-shopping-cart">
-							</p:commandButton>
-						</p:column>
-
-					</p:dataTable>
-				</h:form>
 			</div>
+
+
 		</div>
 
 	</div>
